charts/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-rollouts-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/icon: argo-cd.png
    gethomepage.dev/name: Argo Rollouts
    gethomepage.dev/pod-selector: app.kubernetes.io/component=rollouts-dashboard
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - argo-rollouts.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-rollouts-dashboard
      namespace: argo-rollouts
      port: 3100
